Update Comments on StarDog Validator

--- a/MAIC_Use_Case.ipynb
+++ b/MAIC_Use_Case.ipynb
@@ -2216,7 +2216,7 @@
     "## 1.7 Comments to validation report\n",
     "\n",
     "StarDogs validator conforms false for empty set SPARQL select query results like the ones specified in the SPARQL 1.1 Validation Test (https://www.w3.org/2009/sparql/docs/tests/summary.html#aggregates-agg-empty-group). Therefore, validation results contain false warnings from ComponentMaterialRuleShapeI, ComponentMaterialRuleShapeII, ComponentMaterialRuleShapeIII, NegativeShapeAndSizeRuleShape, ToleranceRuleShape. Please ignore the corresponding results.\n",
-    "This issue was reported to the StarDog engineers (https://community.stardog.com/t/shacl-sparql-for-empty-sparql-select-query-results/3530). An StarDog internal ticket to resolve the problem was already created\n",
+    "This issue was reported to the StarDog engineers (https://community.stardog.com/t/shacl-sparql-for-empty-sparql-select-query-results/3530). A StarDog internal ticket to resolve the problem already exists.\n",
     "\n",
     "The StarDog SHACL validation report does not conform with the W3C documentation. SPARQL variables cannot be bound to the SHACL message as defined in the documentation (https://www.w3.org/TR/shacl/#sparql-constraints-variables). This issue was reported to the StarDog engineers (https://community.stardog.com/t/shacl-sparql-mapping-of-variables-to-sh-message/3477). A corresponding feature request was created."
    ]
